more tool fixes, warning fixes.